# BubbleHub

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/skills/ageos-release-notes/: SKILL.md
.cursor/skills/bubblehub-release-notes/: SKILL.md
.cursor/skills/test-coverage/: SKILL.md
.github/: release_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  maintainer_task.yml
.github/releases/: v0.1.0.md
.github/workflows/: ci.yml  discord-notifications.yml  release.yml
ageos/: __init__.py  gpu_setup.py  http_api.py  inference.py  log.py  native.py
ageos/app/: desktop.py  models.py
ageos/cli/: __init__.py  dashboard.py  inference_daemon.py  main.py  poc.py  prompt.py  ps.py  queue.py  run.py  serve.py  shell.py
ageos/config/: models.yaml
ageos/engine/: backend_base.py  downloader.py  llama_backend.py  registry.py  selector.py  session.py  structured.py  vllm_backend.py
ageos/integrations/: anthropic_shim.py  langchain.py  openai_shim.py
ageos/node/: __init__.py  client.py  daemon.py  telemetry.py
ageos/tui/: dashboard.py
app/static/: app.js  index.html  style.css
bubblehub/: http_api.py  native.py
bubblehub/app/: api.py
bubblehub/cli/: app.py  dashboard.py  main.py  ps.py  run.py  shell.py
bubblehub/integrations/: anthropic_shim.py  langchain.py  openai_shim.py
c/: ageos_sandbox_main.c  hw_detect.c  landlock.c  limits.c  meson.build  sandbox.c  scheduler.c
c/include/ageos/: hw.h  limits.h  sandbox.h  scheduler.h
docker/: Dockerfile
docs/: arch.md  getting_started.md  python_layer.md  running_an_agent.md  sandbox.md
docs/images/: README.md
examples/: basic_agent.py
examples/basic/: basic_agent.py
examples/openclaw/: build.sh
libageos/: ageos_sandbox_main.c  hw_detect.c  landlock.c  log.c  meson.build  overfs.c  sandbox.c  scheduler.c
libageos/include/ageos/: hw.h  log.h  scheduler.h
libageos/tests/: common.h  core_test.c  http_proxy_test.c  log_test.c  meson.build  overfs_test.c  scheduler_test.c  test_hw_detect.c  test_log.c
libbubble/: sandbox.c
libbubble/tests/: meson.build  sandbox_internal_test.c  sandbox_test.c
scripts/: build.sh  install-deps.sh  install-ui.sh  install.ps1  install.sh  package-release.sh
scripts/ci/: run-lint.sh  run-unit-tests-coverage.sh  run-unit-tests.sh  run-windows-release-install-smoke.ps1  validate-release-artifacts.sh  write-coverage-badge.sh  write-coverage-summary.sh  write-windows-icon.py
tests/: conftest.py  test_bash_cli.py  test_ci_integration.py  test_control_models.py  test_engine_session.py  test_gpu_setup.py  test_http_api.py  test_inference.py  test_install_ps1.py  test_integration_shims.py  test_interactive_prompt.py  test_llama_backend.py  test_log.py  test_native_inference.py  test_native_sandbox_detection.py  test_native_scheduler.py  test_openai_shim.py  test_poc.py  test_prompt.py  test_registry.py  test_run.py  test_sandbox.py  test_sandbox_cli_policy.py  test_sandbox_escape.py  test_sandbox_network.py  test_scheduler.py  test_selector.py  test_shell.py  test_structured.py
tests/fixtures/: sandbox_escape_probe.c  sandbox_escape_python.py
